test/parser/cases/invalid/small/statement_recovery_bad_token.cp
main()
{
    let before = 1;
    module;
    let after = 2;
}
